--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
