--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,5 @@
 PORT=8000
 EMAIL_SENDER=loickemadesemadisson@gmail.com
 EMAIL_PASSWORD=bjmr rjuv zkwm ineb
+MONGODB_ATLAS_URI=
+MONGODB_COMPASS_URI=mongodb://localhost:27017/Otaku-vortex
