add signupController node js

--- a/Server/.env
+++ b/Server/.env
@@ -2,4 +2,4 @@ PORT=8000
 EMAIL_SENDER=loickemadesemadisson@gmail.com
 EMAIL_PASSWORD=bjmr rjuv zkwm ineb
 MONGODB_ATLAS_URI=
-MONGODB_COMPASS_URI=mongodb://localhost:27017/Otaku-vortex
+MONGODB_COMPASS_URI=mongodb://127.0.0.1:27017/Otaku-vortex
