add emailController to next

--- a/Server/.env
+++ b/Server/.env
@@ -3,3 +3,4 @@ EMAIL_SENDER=loickemadesemadisson@gmail.com
 EMAIL_PASSWORD=bjmr rjuv zkwm ineb
 MONGODB_ATLAS_URI=
 MONGODB_COMPASS_URI=mongodb://127.0.0.1:27017/Otaku-vortex
+SECRET_KEY=Otaku_token_key
