--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
