--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,7 @@
 PORT=8000
 EMAIL_SENDER=loickemadesemadisson@gmail.com
 EMAIL_PASSWORD=bjmr rjuv zkwm ineb
-MONGODB_ATLAS_URI=
+MONGODB_ATLAS_URI=mongodb+srv://johankirito64:Thk9yjIkzxiNXRw4@cluster.kqyz4jl.mongodb.net/
 MONGODB_COMPASS_URI=mongodb://127.0.0.1:27017/Otaku-vortex
 SECRET_KEY=Otaku_token_key
+# Thk9yjIkzxiNXRw4
