--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^1.6.1",
     "emailjs-com": "^3.2.0",
     "next": "14.0.2",
